@@ -11,6 +11,8 @@
 - Update syscall tables
 - On i386, audit rules do not work on inode's with a large number
 - Improve the robustness of libaudit field encoding functions
+- Add optional ARM processor support
+- Fix autrace to use correct syscalls on i386 systems (Peng Haitao)
 
 1.7.18
 - Update time examples in ausearch/report man pages
